<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_profile">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.zybooks.swapit.HomePageFragment"
        android:label="@string/title_home"
        tools:layout="@layout/activity_homepage" />

    <fragment
        android:id="@+id/navigation_addpost"
        android:name="com.zybooks.swapit.PostItemFragment"
        android:label="@string/title_post"
        tools:layout="@layout/activity_postitem" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.zybooks.swapit.ViewUserProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/activity_viewuserprofile" />

    <fragment
        android:id="@+id/navigation_messages"
        android:name="com.zybooks.swapit.ViewMessagesFragment"
        android:label="@string/title_messages"
        tools:layout="@layout/activity_openmessages" />
</navigation>