<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#281a41"
    android:gravity="center_horizontal"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/main_logo"
        android:layout_width="wrap_content"
        android:layout_height="500dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/main_username"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="390dp"
        android:background="#11000000"
        android:drawableLeft="@drawable/ic_action_username"
        android:ems="10"
        android:hint="@string/main_usernamehint"
        android:inputType="textPersonName"
        android:textColor="#F2F2F2"
        android:textColorHint="#6F5C72" />

    <EditText
        android:id="@+id/main_password"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@id/main_username"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="#11000000"
        android:drawableLeft="@drawable/ic_action_password"
        android:ems="10"
        android:hint="@string/main_passwordhint"
        android:inputType="textPassword"
        android:textColor="#FAF7F7"
        android:textColorHint="#6F5C72" />

    <Button
        android:id="@+id/main_loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="550dp"
        android:background="#80FFFFFF"
        android:fontFamily="sans-serif-medium"
        android:text="@string/main_loginbutton" />

    <Button
        android:id="@+id/main_signupbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="600dp"
        android:background="@android:color/transparent"
        android:foregroundGravity="bottom"
        android:text="@string/main_signupbutton"
        android:textAllCaps="false"
        android:textColor="#E0CFD5" />

    <ProgressBar
        android:id="@+id/main_progressbar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="320dp"
        android:visibility="gone" />

</RelativeLayout>